# ElucidatTechTask

./: README.md  bugs_observed.txt  pyproject.toml  requirements.txt
features/: environment.py  kevin_case_vote.feature  kevin_case_vote.py  select_who_is_to_blame.feature  select_who_is_to_blame.py  user_initial_score.feature  user_initial_score.py
features/steps/: kevin_case_vote.py  select_who_is_to_blame.py
