[tool.poetry]
name = "elucidattechtask"
version = "0.1.0"
description = ""
authors = ["sean.brackenborough <sean.brackenborough.dev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
behave = "^1.2.6"
selenium = "^4.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
